infrastructure/k8s/operators/ingress-controller-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
  labels:
    name: ingress-nginx
    security.depin.io/tier: system
    security.depin.io/ingress: enabled
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
spec: {}
